[gd_scene load_steps=4 format=3 uid="uid://b4uwst7yyous4"]

[ext_resource type="FontFile" uid="uid://brj6ukndau2j2" path="res://assets/fonts/monogram.ttf" id="1_irj3g"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_l712e"]
[ext_resource type="AudioStream" uid="uid://caxmxb8wkdfs7" path="res://assets/sounds/click.ogg" id="3_pv076"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_l712e")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
offset_left = 270.0
offset_top = 524.0
offset_right = 450.0
offset_bottom = 756.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="YouDiedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 60
text = "You Died"

[node name="ScoreBox" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer/ScoreBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "Score: "

[node name="ScoreValue" type="Label" parent="Panel/VBoxContainer/ScoreBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HighScoreBox" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HighscoreLabel" type="Label" parent="Panel/VBoxContainer/HighScoreBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "Highscore:"

[node name="HighscoreValue" type="Label" parent="Panel/VBoxContainer/HighScoreBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Retry" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="Main Menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_irj3g")
theme_override_font_sizes/font_size = 32
text = "Main Menu"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pv076")
volume_db = 10.0

[connection signal="pressed" from="Panel/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
